Fix spacing issues

--- a/src/components/theme-toggler/themeToggle.sass
+++ b/src/components/theme-toggler/themeToggle.sass
@@ -1,5 +1,6 @@
 .theme-toggle-container
   position: fixed
+  top: 43px
   left: 100px
   z-index: 999
 
